* Fix: Too long extension keys in sysmanager

--- a/asset/css/extensions.css
+++ b/asset/css/extensions.css
@@ -68,10 +68,15 @@
 	width:20px;
 }
 .extlist th.extkey {
-	width:100px;
+	width:107px;
+}
+.extlist td.extkey div {
+	width:95px;
+	height:12px;
+	overflow: hidden;
 }
 .extlist th.title {
-	width:225px;
+	width:235px;
 }
 .extlist th.edit {
 	width:120px;
@@ -80,13 +85,13 @@
 	width:40px;
 }
 .extlist th.download {
-	width:20px;
+	width:16px;
 }
 .extlist th.doc {
-	width:20px;
+	width:16px;
 }
-.extlist th.status {
-	width:50px;
+.extlist th.state {
+	width:40px;
 }
 
 	/* list icons */
